# your-pdf-qna

./: Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py  streamlit_app.py
